feat: route GET /organizations/identifier
