# apps/api/src/organization/router.js
@@ -1,7 +1,9 @@
 const Router = require('koa-router');
 
 const {
+    deleteOrganization,
     createOrganization,
+    getOrganization,
     getOrganizationPaginatedList,
 } = require('./repository');
 
@@ -40,17 +42,70 @@ router.get('/', async ctx => {
 });
 
 router.post('/', async ctx => {
+    console.log('CREATION ORGA');
     const newOrganization = await createOrganization({
         client: ctx.db,
         apiData: ctx.request.body,
     });
+
     if (newOrganization.error) {
         const explainedError = new Error(newOrganization.error.message);
         explainedError.status = 400;
+
         throw explainedError;
     }
 
     ctx.body = newOrganization;
+});
+
+router.get('/:organizationId', async ctx => {
+    const organization = await getOrganization({
+        client: ctx.db,
+        organizationId: ctx.params.organizationId,
+    });
+
+    if (!organization.id) {
+        const explainedError = new Error(
+            `The organization of id ${ctx.params.organizationId} does not exist.`
+        );
+        explainedError.status = 404;
+
+        throw explainedError;
+    }
+
+    if (organization.error) {
+        const explainedError = new Error(organization.error.message);
+        explainedError.status = 400;
+
+        throw explainedError;
+    }
+
+    ctx.body = organization;
+});
+
+router.delete('/:organizationId', async ctx => {
+    const deletedOrganization = await deleteOrganization({
+        client: ctx.db,
+        organizationId: ctx.params.organizationId,
+    });
+
+    if (!deletedOrganization) {
+        const explainedError = new Error(
+            `The organization of id ${ctx.params.organizationId} does not exist.`
+        );
+        explainedError.status = 404;
+
+        throw explainedError;
+    }
+
+    if (deletedOrganization.error) {
+        const explainedError = new Error(deletedOrganization.error.message);
+        explainedError.status = 400;
+
+        throw explainedError;
+    }
+
+    ctx.body = deletedOrganization;
 });
 
 module.exports = router;
